Bump deps + cleanup